# UESTC_AA_MBZIRC205

./: README.md
TP/taskplanning_V1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TP/taskplanning_V1/src/: Makefile  main  main.cpp
TP/taskplanning_backup/inc/: detect.h
TP/taskplanning_backup/src/: CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  detect.cpp
